AUT-399 - Fix contrast issues for links and errors panes by changing colors instead of increasing text font size

--- a/disain/styles/components/_footer.scss
+++ b/disain/styles/components/_footer.scss
@@ -13,9 +13,6 @@
       flex-direction: column;
     }
   }
-  &__col {
-    font-size: 24px;
-  }
   &__block {
     display: flex;
     align-items: flex-end;
