--- a/disain/styles/components/_form.scss
+++ b/disain/styles/components/_form.scss
@@ -92,19 +92,18 @@
 .invalid-feedback {
   margin-top: 17px;
   padding: 12px 20px;
-  color: #5d6071;
-  background-color: #fdb9b7;
+  color: #34394c;
+  background-color: #ffb9b6;
   box-shadow: 0 5px 8px 1px rgba(57, 68, 77, 0.35);
   border-radius: 10px;
   position: relative;
-  font-size: 24px;
   &:before {
     content: "";
     width: 0;
     height: 0;
     border-left: 12px solid transparent;
     border-right: 12px solid transparent;
-    border-bottom: 12px solid #fdb9b7;
+    border-bottom: 12px solid #ffb9b6;
     position: absolute;
     top: -12px;
     left: 20px;
@@ -118,7 +117,7 @@
   padding: 20px;
   border-radius: 8px;
   position: relative;
-  color: #5d6071;
+  color: #34394c;
   @media (max-width: $breakpoint-mobile) {
     margin-top: 15px;
     padding: 15px;
@@ -141,7 +140,7 @@
     }
   }
   a {
-    color: #5d6071;
+    color: #34394c;
   }
   table {
     th, td {
@@ -154,9 +153,8 @@
   }
 }
 .alert-error {
-  background-color: #fdb9b7;
+  background-color: #ffb9b6;
   border: 4px solid #fc7376;
-  font-size: 24px;
   @media (max-width: $breakpoint-mobile) {
     border-width: 2px;
   }
